--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,32 @@ html, body {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
+.image-list {
+  .image-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
+
+    .image-tile img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .image-tile:nth-child(3n){
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+
+  }
+
+  @media screen and (max-width: 768px){
+    .image-grid{
+        display: block;
+    }
+    .image-tile{
+        margin-bottom: 1rem;
+    }
+}
+}
