--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,45 +1,46 @@
 <% render partial: "shared/capture_navbar" %>
 
-<section class="images-edit-view">
+<section id="images-edit-view" class="section">
 
-  <div class="grid-container">
-    <div class="grid-x grid-padding-x">
-      <div class="small-12 medium-8 cell">
-        <%= link_to rails_blob_path(@image.image_file, disposition: "attachment")  do %>
-          <%= generate_image_tag(@image, [1000, nil]) %>
-        <% end %>
-      </div>
-
-      <div class="small-12 medium-4 cell">
-          <% if @image.image_tags.empty? %>
-            <h4>There are no characters in this image.</h4>
-          <% else %>
-            <h4>This image contains...</h4>
-            <% @image.image_tags.each do | tag | %>
-              <div class="buttongroup">
-                <%= link_to "#{tag.character.name}", character_url(tag.character), class: "button" %>
-                  <%= link_to image_tag_url(tag), method: "delete" do %>
-                    <button class="alert button">X</button>
-                  <% end %>
-              </div>
-            <% end %>
+<div class="columns is-centered">
+  <div class="column is-one-quarter has-text-centered">
+    <% if @image.image_tags.empty? %>
+      <h1>There are no characters in this image.</h1>
+    <% else %>
+      <h1>This image contains...</h1>
+      <% @image.image_tags.each do | tag | %>
+        <div class="block">
+          <%= link_to "#{tag.character.name}", character_url(tag.character), class: "button is-link" %>
+          <%= link_to image_tag_url(tag), method: "delete" do %>
+            <button class="button is-danger">X</button>
           <% end %>
+        </div>
+      <% end %>
+    <% end %>
 
-        <% if @image.universe.characters.empty? %>
-          <h4>There are no characters in this universe to link to this image.<h4>
-        <% else %>
-          <h4>You could add...</h4>
-          <%= form_with model: ImageTag.new(), url: universe_image_image_tags_url(@image.universe, @image), method: "post" do |form| %>
-            <%= form.select :character_id, generate_character_names(@image.universe.characters, @image.image_tags), {include_blank: true}  %>
-            <%= form.submit "Add", class: "button" %>
-          <% end %>
-        <% end %>
+    <hr />
 
-        <h4>Controls</h4>
-          <%= link_to "Delete", universe_image_url(@image), method: "delete", :data => {:confirm => "Are you sure?"}, class:"alert button" %>
-      </div>
+    <% if @image.universe.characters.empty? %>
+      <h1>There are no characters in this universe.</h1>
+    <% else %>
+      <h1>You could add...</h1>
+      <%= form_with model: ImageTag.new(), url: universe_image_image_tags_url(@image.universe, @image), method: "post" do |form| %>
+        <div class="select">
+          <%= form.select :character_id, generate_character_names(@image.universe.characters, @image.image_tags), {include_blank: true}  %>
+        </div>
+        <%= form.submit "Add", class: "button" %>
+      <% end %>
+    <% end %>
 
-    </div>
+    <hr />
+    <%= link_to "Delete Image", universe_image_url(@image), method: "delete", :data => {:confirm => "Are you sure?"}, class:"button is-danger" %>
+
   </div>
+  <div class="column is-three-quarters">
+    <%= link_to rails_blob_path(@image.image_file, disposition: "attachment")  do %>
+      <%= generate_image_tag(@image, [1000, nil]) %>
+    <% end %>
+  </div>
+</div>
 
 </section>
