--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,11 @@ html, body {
 }
 
 .image-list {
+  .img-thumbnail {
+    max-width: 250px;
+    max-height: 300px;
+  }
+
   .image-grid {
     text-align: center;
     display: flex;
