--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>Blackbook</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
 
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
-
     <% if content_for?(:navbar) %>
       <%= yield(:navbar) %>
     <% else %>
@@ -24,6 +21,5 @@
       <%= yield%>
     </main>
     <%= render "shared/flashbar" %>
-
   </body>
 </html>
