--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,10 +36,10 @@
       <%= link_to "Edit Character", edit_character_url(@character), class: "navbar-item" %>
     <% end %>
     <% if user_signed_in? %>
-      <%= link_to "Logout", destroy_user_session_path, data: { "turbo-method": :delete }, class: "navbar-item" %>
+      <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-item" %>
     <% else %>
-      <%= link_to "Register", new_user_registration_path, class: "navbar-item" %>
-      <%= link_to "Sign in", new_user_session_path, class: "navbar-item" %>
+      <%= button_to "Register", new_user_registration_path, class: "navbar-item" %>
+      <%= button_to "Sign in", new_user_session_path, class: "navbar-item" %>
     <% end %>
     </div>
   </div>
