--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 @import "bulma";
 @import "font-awesome";
 
+@import "../../views/devise/sessions/new.scss";
+
 html, body {
   box-sizing: border-box;
   min-width: 375px;
@@ -8,33 +10,4 @@ html, body {
 
 *, *:before, *:after {
   box-sizing: inherit;
-}
-
-.image-list {
-  .img-thumbnail {
-    max-width: 250px;
-    max-height: 400px;
-  }
-
-  .image-grid {
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .image-tile {
-    min-width: 250px;
-    padding: .25em;
-  }
-
-  @media screen and (max-width: 768px){
-    .image-grid{
-        display: block;
-    }
-    .image-tile{
-        margin-bottom: 1rem;
-    }
-}
 }
