--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,8 +38,8 @@
     <% if user_signed_in? %>
       <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-item" %>
     <% else %>
-      <%= button_to "Register", new_user_registration_path, class: "navbar-item" %>
-      <%= button_to "Sign in", new_user_session_path, class: "navbar-item" %>
+      <%= link_to "Register", new_user_registration_path, class: "navbar-item" %>
+      <%= link_to "Sign in", new_user_session_path, class: "navbar-item" %>
     <% end %>
     </div>
   </div>
