--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bulma";
 @import "font-awesome";
 
+@import "../../views/devise/registrations/new.scss";
 @import "../../views/devise/sessions/new.scss";
 
 html, body {
