--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 
 @import "../../views/devise/registrations/new.scss";
 @import "../../views/devise/sessions/new.scss";
+@import "../../views/shared/image_list.scss";
 
 html, body {
   box-sizing: border-box;
