--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,13 +1,15 @@
 @import "bulma";
 @import "font-awesome";
 
+@import "../../views/characters/new.scss";
 @import "../../views/devise/registrations/new.scss";
 @import "../../views/devise/sessions/new.scss";
-@import "../../views/shared/image_list.scss";
+@import "../../views/shared/_image_list.scss";
 
 html, body {
   box-sizing: border-box;
   min-width: 375px;
+  background-color: $light;
 }
 
 *, *:before, *:after {
