--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,18 @@
 @import "bulma";
 @import "font-awesome";
 
+// Character
+@import "../../views/characters/edit.scss";
 @import "../../views/characters/new.scss";
+
+// User
 @import "../../views/devise/registrations/new.scss";
 @import "../../views/devise/sessions/new.scss";
+
+// Shared
 @import "../../views/shared/_image_list.scss";
 
+// Global
 html, body {
   box-sizing: border-box;
   min-width: 375px;
