--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,18 +1,23 @@
-<section class="characters-edit-view">
+<section id="characters-edit-view" class="section is-fullheight">
 
-  <div class="grid-container">
-    <div class="grid-x grid-padding-x">
-      <div class="small-12 cell">
-        <h2>Edit Character</h2>
-      </div>
-
-      <div class="large-6 medium-8 large-offset-3 medium-offset-2 cell">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-4-tablet is-5-desktop">
         <%= form_with model: @character, url: character_url(@character), method: "patch" do |form| %>
-          <%= form.label :name %>
-          <%= form.text_field :name %>
-          <%= form.submit "Save", class: "button" %>
-          <%= link_to "Cancel", character_path(@character), class: "secondary button" %>
-          <%= link_to "Delete", character_path(@character), method: "delete", :data => {:confirm => "Are you sure?"}, class: "alert button" %>
+            <div class="field">
+              <%= form.label :name, class: "label" %>
+              <div class="control has-icons-left">
+                <span class="icon is-small is-left">
+                    <%= fa_icon "user" %>
+                </span>
+                <%= form.text_field :name, class: 'input', placeholder: "Tangle", required: true %>
+              </div>
+            </div>
+            <div class="field">
+              <%= form.submit "Save", class: "button is-info" %>
+              <%= link_to "Cancel", character_path(@character), class: "button is-danger" %>
+              <%= link_to "Delete", character_path(@character), method: "delete", :data => {:confirm => "Are you sure?"}, class: "alert button is-danger" %>
+            </div>
         <% end %>
       </div>
     </div>
