--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
 
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
-      Blackbook 2.0
+      Blackbook
     </a>
 
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="blackbookNavBar">
