--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,20 +14,20 @@
 
   <div id="blackbookNavBar" class="navbar-menu">
     <div class="navbar-start">
+      <% unless @new_character.nil? || @new_character.universe.nil? %>
+        <%= link_to "#{@new_character.universe.name}", universe_url(@new_character.universe), class: "navbar-item" %>
+      <% end %>
       <% unless @character.nil? %>
-        <span class="navbar-item"><%= @character.name %></span>
+        <%= link_to "#{@character.universe.name}", universe_url(@character.universe), class: "navbar-item" %>
+      <% end %>
+      <% unless @image.nil? %>
+        <%= link_to "#{@image.universe.name}", universe_url(@image.universe), class: "navbar-item" %>
       <% end %>
       <% unless @universe.nil? %>
-        <span class="navbar-item"><%= @universe.name %></span>
+        <%= link_to "#{@universe.name}", universe_url(@universe), class: "navbar-item" %>
       <% end %>
     </div>
     <div class="navbar-end">
-    <% unless @character.nil? %>
-      <%= link_to "Back to #{@character.universe.name}", universe_url(@character.universe), class: "navbar-item" %>
-    <% end %>
-    <% unless @image.nil? %>
-      <%= link_to "Back to #{@image.universe.name}", universe_url(@image.universe), class: "navbar-item" %>
-    <% end %>
     <% unless @universe.nil? %>
       <%= link_to "New Character", new_universe_character_url(@universe), class: "navbar-item" %>
       <%= link_to "Edit Universe", edit_universe_url(@universe), class: "navbar-item" %>
