--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -40,7 +40,7 @@
 
       <% end %>
 
-      <%= link_to "Delete", universe_image_url(@image), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class:"button is-danger mt-2" %>
+      <%= button_to "Delete", universe_image_url(@image), method: :delete, data: { confirm: 'Are you sure?' }, class: "button is-danger mt-2" %>
     </div>
 
     <div class="column is-8-tablet">
